0.11

- Roles can now have class attributes, which will be fully initialized when
  the role is applied to a class.


0.10   2009-08-26

- Fixed to make triggers work with Moose 0.89+, and made triggers pass the old
  attribute value when appropriate just like non-class attributes.


0.09   2009-07-09

- An attribute with a builder that wasn't also lazy caused an
  exception when the attribute's accessor was called. Reported by
  Josh.


0.08   2009-04-07

- Make this module work with Moose 0.73_01+.

- Deprecated compute_all_applicable_class_attributes. Use
  get_all_class_attributes instead.


0.07   2008-11-10

- Fixed a bug where class attributes did not honor the
  Class::MOP::Attribute properly, so things that used it directly
  failed. This bug could be tickled by using certain
  MooseX::AttributeHelpers attribute metaclasses with a class
  attribute. Fixed by Shawn Moore.


0.06   2008-09-06

- No code changes, just added a missing prereq for
  MooseX::AttributeHelpers.


0.05   2008-09-05

* Totally rewritten as proper meta classes, so it supports
  introspection and all that good stuff. This breaks some old code
  because there is no longer a "containing class" for class
  attributes.


0.04   2008-01-21

- An internals change to make this class work with Moose 0.34.


0.03   2007-12-08

- Split main functionality out of sugar sub class_has(), into
  process_class_attribute(). This makes it easier to create attributes
  on behalf of other classes.


0.02   2007-11-25

- Inherit from Exporter, rather than trying to import its
  import(). Unfortunately, older Exporters as shipped with Perl 5.6.x
  only allow subclassing.


0.01   2007-11-24

- First version, released on an unsuspecting world.